--- a/frontend/CheckInApp/package.json
+++ b/frontend/CheckInApp/package.json
@@ -13,9 +13,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "0.21.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "rxjs": "6.6.3",
     "react-native-safe-area-context": "^4.7.2"
   },
   "devDependencies": {
